# g2d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: nautilus_env.sh
driver/: main.cpp
example/: inputs.g2d
g2d/: CMakeLists.txt
g2d/meshgen/interface/: 3doo.cpp
g2d/meshgen/python/: airfoil_utils.py  grid_utils.py
g2d/meshgen/rundirs/opt_design_1/: makemeshes.py  opt_nsga2.grid  opt_nsga2.xy_xfoil
g2d/meshgen/rundirs/optim_result/: makemeshes.py
g2d/meshgen/rundirs/tests/: tmp.lay
g2d/meshgen/rundirs/tests/harrington/: gen.py  inputs.py
g2d/meshgen/rundirs/tests/uh60/airfoils/: sc1095_raw.txt
g2d/meshgen/src/: meshgen.cpp  slor.c  ss.c  write.cpp
g2d/python/: c81utils.py  g2d_to_c81.py
g2d/rundirs/opt_design_0/: driver.py  g2d
g2d/rundirs/opt_design_1/: job.lsf  nohup.out
g2d/rundirs/xfoil_opt/: opt_design_0.c81
g2d/src/: bc.cu  converge.cu  dadi.cu  g2d.cpp  g2d.h  gmres_utils.cu  gpu.h  inviscid_flux.cu  metrics.cu  rhs.cu  step.cu  timer.cpp
interface/: pyb_orchard.cpp  pyb_orchard.h  pyg2d.cpp  wrap.cpp
meshgen/: CMakeLists.txt  README.md
meshgen/include/: lsmooth.hpp  meshgen.hpp  structures.h
meshgen/interface/: ogen.cpp
meshgen/python/: close.py  gen.py  grid_utils.py  hickshenne.py  lsmooth.py  makemeshes.py  naca.py  spandist.py  untitled.py  utils.py
meshgen/python/unused/: twod.py
meshgen/rundirs/2d_example/: makemeshes.py
meshgen/rundirs/2d_example/meshes/: note.txt
meshgen/rundirs/higen_slices/: makemeshes.py  slice2foils.py
meshgen/rundirs/opt_design_1/: opt_nsga2.xy_Cmesh
meshgen/rundirs/optim_result/: opt_design_0.grid  opt_design_0.xfoil_xy
meshgen/rundirs/tests/: test.py
meshgen/rundirs/tests/blade/: gen.py  spandist.py
meshgen/rundirs/tests/harrington/: rotate.py  twod.py
meshgen/rundirs/tests/uh60/: gen.py  inputs.py
meshgen/rundirs/tests/uh60/airfoils/: convert.py  dbg.py  sc1094r8_raw.txt
meshgen/src/: init.cpp  lsmooth.cpp  poisson.cpp  slor.h  ss.h  write_grid.cpp
opt_design_0/: clcd.py
python/: airfoilprep.py  plot_c81.py  postg2d.py  postprocess_g2d.py
rundirs/7a_example/: 7a_foil.x  inputs.g2d  job.slurm
rundirs/7a_example/post/: go.py  postprocess_g2d.py
rundirs/opt_design_0/: clcd.py  parallel.py
rundirs/opt_design_1/: AS_driver.py
scripts/: clcd.py
solver/: CMakeLists.txt
solver/driver/: main.cpp
solver/src/: converge.cu  dadi.cu  g2d.cpp  g2d_types.h  residual.cu  sa.cu  step.cu  utils.cpp
src/: bc.cu  converge.cu  dadi.cu  debug.cu  forces.cu  g2d.cpp  g2d.h  g2d_types.h  gmres.cu  gmres_utils.cu  gpu.h  helper_math.h  init.cu  inviscid_flux.cu  metrics.cu  precondition.cu  residual.cu  rhs.cu  sa.cu  step.cu  timer.h  utils.cpp  viscous_flux.cu  vorticity.cu  write.cpp
unused/: naca0012.xyz
